miniextendr-macros/tests/ui/non_into_r_return.rs
//! Test: non-IntoR return type should fail to compile.

use miniextendr_macros::miniextendr;

struct NotIntoR;

#[miniextendr]
fn returns_bad() -> NotIntoR {
    NotIntoR
}

fn main() {}
